--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,105 +1,179 @@
-// CSH Material Bootstrap 4.0.0
-// Based on Bootswatch Materia
+// CSH Dark Material Bootstrap 4.0.0
+// Based on Bootswatch Darkly
 
-// Color system ================================================================
+//
+// Color system
+//
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #eee !default;
+$gray-200: #ebebeb !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
-$gray-500: #bbb !default;
-$gray-600: #666 !default;
+$gray-500: #adb5bd !default;
+$gray-600: #999 !default;
 $gray-700: #444 !default;
-$gray-800: #222 !default;
-$gray-900: #212121 !default;
+$gray-800: #303030 !default;
+$gray-900: #222 !default;
 $black:    #000 !default;
 
-$blue:    #2196F3 !default;
+$blue:    #375a7f !default;
 $indigo:  #6610f2 !default;
 $purple:  #b0197e !default;
 $pink:    #e83e8c !default;
-$red:     #e51c23 !default;
+$red:     #E74C3C !default;
 $orange:  #fd7e14 !default;
-$yellow:  #ff9800 !default;
-$green:   #4CAF50 !default;
+$yellow:  #F39C12 !default;
+$green:   #00bc8c !default;
 $teal:    #20c997 !default;
-$cyan:    #9C27B0 !default;
+$cyan:    #3498DB !default;
 
-$primary:   $purple !default;
-$secondary: $white !default;
-$success:   $green !default;
-$info:      $blue !default;
-$warning:   $yellow !default;
-$danger:    $red !default;
-$light:     $white !default;
-$dark:      $gray-800 !default;
+$primary:       $purple !default;
+$secondary:     $gray-700 !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-600 !default;
+$dark:          $gray-800 !default;
 
-// Body ========================================================================
+$yiq-contrasted-threshold:  175 !default;
 
-$body-color: $gray-700 !default;
+// Body
 
-// Fonts =======================================================================
+$body-bg:                   $gray-900 !default;
+$body-color:                $white !default;
 
-$font-family-sans-serif:  "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
-$font-size-base:          0.8125rem !default;
-$font-weight-base:        400 !default;
+// Links
 
-// Buttons =====================================================================
+$link-color:                $success !default;
 
-$input-btn-padding-y: 1rem !default;
-$input-btn-padding-x: 1rem !default;
+// Fonts
 
-// Forms =======================================================================
+$font-family-sans-serif:      "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
-$input-bg:          transparent !default;
-$input-disabled-bg: transparent !default;
+$font-size-base:              0.9375rem !default;
 
-$input-color:         $gray-600 !default;
-$input-border-color:  transparent !default;
+$h1-font-size:                3rem !default;
+$h2-font-size:                2.5rem !default;
+$h3-font-size:                2rem !default;
 
-$input-border-radius:     0 !default;
-$input-border-radius-lg:  0 !default;
-$input-border-radius-sm:  0 !default;
+// Tables
 
-$input-placeholder-color: rgba(0,0,0,0.4) !default;
+$table-accent-bg:             $gray-800 !default;
 
-$input-group-addon-bg: transparent !default;
+$table-border-color:          $gray-700 !default;
 
-// Navs ========================================================================
+// Forms
 
-$nav-link-disabled-color: $gray-500 !default;
+$input-border-color:                    transparent !default;
 
-$nav-tabs-border-color: transparent !default;
+$input-group-addon-color:               $gray-500 !default;
+$input-group-addon-bg:                  $gray-700 !default;
 
-// Navbars =====================================================================
+$custom-file-color:                 $gray-500 !default;
+$custom-file-border-color:          $gray-700 !default;
 
-$navbar-dark-color:       rgba($white,.75) !default;
-$navbar-dark-hover-color: $white !default;
+// Dropdowns
+
+$dropdown-bg:                       $gray-900 !default;
+$dropdown-border-color:             $gray-700 !default;
+$dropdown-divider-bg:               $gray-700 !default;
+
+$dropdown-link-color:               $white !default;
+$dropdown-link-hover-color:         $white !default;
+$dropdown-link-hover-bg:            $primary !default;
+
+// Navs
+
+$nav-link-padding-x:                2rem !default;
+$nav-link-disabled-color:           $gray-500 !default;
+
+$nav-tabs-border-color:             $gray-700 !default;
+$nav-tabs-link-hover-border-color:  $nav-tabs-border-color $nav-tabs-border-color transparent !default;
+$nav-tabs-link-active-color:        $white !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent !default;
+
+// Navbar
+
+$navbar-padding-y:                  1rem !default;
+
+$navbar-dark-color:                rgba($white,.6) !default;
+$navbar-dark-hover-color:          $white !default;
+
+$navbar-light-color:                 $white !default;
+$navbar-light-hover-color:           $success !default;
+$navbar-light-active-color:         $white !default;
+$navbar-light-disabled-color:       rgba($white,.3) !default;
+$navbar-light-toggler-border-color: rgba($white,.1) !default;
 
 $navbar-logo: url('data:image/svg+xml;utf8,<svg width="66" height="66" xmlns="http://www.w3.org/2000/svg"><g fill="%23000" fill-rule="evenodd"><path d="M51.294 18.591V5.841c0-2.012-1.64-3.643-3.664-3.643H3.664C1.64 2.198 0 3.83 0 5.841v56.465c0 2.012 1.64 3.643 3.664 3.643H47.63c2.023 0 3.664-1.631 3.664-3.643v-12.75H40.302v3.643c0 1.006-.82 1.821-1.832 1.821H12.823a1.827 1.827 0 0 1-1.832-1.821v-38.25c0-1.006.82-1.822 1.832-1.822H38.47c1.012 0 1.832.816 1.832 1.821v3.643h10.992z"/><path d="M35.722 16.77h-20.15a.913.913 0 0 0-.917.91v19.126c0 .503.41.91.916.91h12.366c.253 0 .458.204.458.456v5.464a.457.457 0 0 1-.458.455h-4.58a.457.457 0 0 1-.458-.455V41.36h-8.244v9.108c0 .503.41.91.916.91h20.151a.913.913 0 0 0 .916-.91V31.34c0-.503-.41-.91-.916-.91H23.357a.457.457 0 0 1-.458-.456v-5.464c0-.251.205-.455.458-.455h4.58c.253 0 .458.204.458.455v2.277h8.243V17.68c0-.503-.41-.91-.916-.91zM51.294 38.627v7.286H40.302V22.234h10.992v7.286h3.663V2.198H65.95v63.75H54.957v-27.32h-3.663z"/></g></svg>') !default;
 
 $navbar-logo-white: url('data:image/svg+xml;utf8,<svg width="66" height="66" xmlns="http://www.w3.org/2000/svg"><g fill="%23F5F5F5" fill-rule="evenodd"><path d="M51.294 18.591V5.841c0-2.012-1.64-3.643-3.664-3.643H3.664C1.64 2.198 0 3.83 0 5.841v56.465c0 2.012 1.64 3.643 3.664 3.643H47.63c2.023 0 3.664-1.631 3.664-3.643v-12.75H40.302v3.643c0 1.006-.82 1.821-1.832 1.821H12.823a1.827 1.827 0 0 1-1.832-1.821v-38.25c0-1.006.82-1.822 1.832-1.822H38.47c1.012 0 1.832.816 1.832 1.821v3.643h10.992z"/><path d="M35.722 16.77h-20.15a.913.913 0 0 0-.917.91v19.126c0 .503.41.91.916.91h12.366c.253 0 .458.204.458.456v5.464a.457.457 0 0 1-.458.455h-4.58a.457.457 0 0 1-.458-.455V41.36h-8.244v9.108c0 .503.41.91.916.91h20.151a.913.913 0 0 0 .916-.91V31.34c0-.503-.41-.91-.916-.91H23.357a.457.457 0 0 1-.458-.456v-5.464c0-.251.205-.455.458-.455h4.58c.253 0 .458.204.458.455v2.277h8.243V17.68c0-.503-.41-.91-.916-.91zM51.294 38.627v7.286H40.302V22.234h10.992v7.286h3.663V2.198H65.95v63.75H54.957v-27.32h-3.663z"/></g></svg>') !default;
 
-// Cards =======================================================================
 
-$card-border-width: 0;
-$card-border-color: transparent;
+// Pagination
 
-// Tooltips ====================================================================
+$pagination-color:                  $white !default;
+$pagination-bg:                     $success !default;
+$pagination-border-width:           0 !default;
+$pagination-border-color:           transparent !default;
 
-$tooltip-bg: $gray-700 !default;
+$pagination-hover-color:            $white !default;
+$pagination-hover-bg:               lighten($success, 10%) !default;
+$pagination-hover-border-color:     transparent !default;
 
-// Modals ======================================================================
+$pagination-active-bg:              $pagination-hover-bg !default;
+$pagination-active-border-color:    transparent !default;
 
-$modal-content-border-color: transparent !default;
+$pagination-disabled-color:         $white !default;
+$pagination-disabled-bg:            darken($success, 15%) !default;
+$pagination-disabled-border-color:  transparent !default;
 
-// Progress Bars ===============================================================
+// Jumbotron
 
-$progress-height:         6px !default;
-$progress-border-radius:  0 !default;
+$jumbotron-bg:                      $gray-800 !default;
 
-// Close =======================================================================
+// Cards
 
-$close-font-size:   2.125rem !default;
-$close-font-weight: 300 !default;
+$card-cap-bg:                       $gray-700 !default;
+$card-bg:                           $gray-800 !default;
+
+// Popovers
+
+$popover-bg:                        $gray-800 !default;
+
+$popover-header-bg:                 $gray-700 !default;
+
+// Modals
+
+$modal-content-bg:                  $gray-800 !default;
+$modal-content-border-color:        $gray-700 !default;
+
+$modal-header-border-color:         $gray-700 !default;
+
+// Progress bars
+
+$progress-height:                   0.625rem !default;
+$progress-font-size:                0.625rem !default;
+$progress-bg:                       $gray-700 !default;
+
+// List group
+
+$list-group-bg:                     $gray-800 !default;
+$list-group-border-color:           $gray-700 !default;
+
+$list-group-hover-bg:               $gray-700 !default;
+
+// Breadcrumbs
+
+$breadcrumb-bg:                     $gray-700 !default;
+
+// Close
+
+$close-color:                       $white !default;
+$close-text-shadow:                 none !default;
+
+// Code
+
+$pre-color:                         inherit !default;
